# offset-printing-machine-simulator-lib

./: .gitignore  CMakeLists.txt  Component.cpp  Component.h  Machine.cpp  Machine.h  README.md  build.sh
Components/: Conveyor.cpp  Conveyor.h  Delivery.cpp  Delivery.h  Feeder.cpp  Feeder.h  PaintStation.cpp  PaintStation.h  TempoComponent.h
Interfaces/: ComponentMessageReceiver.h  ConveyorRateMessageReceiver.h  CountMessageReceiver.h  ExternalMachineMessageReceiver.h  ExternalMachineStateReceiver.h  ExternalMessageReceiver.h  MachineStateMessageReceiver.h
Logger/: Logger.cpp  Logger.h
Messages/: ActionStatusMessage.cpp  ActionStatusMessage.h  ComponentMessage.cpp  ComponentMessage.h  ConveyorRateMessage.cpp  ConveyorRateMessage.h  CountMessage.cpp  CountMessage.h  MachineStateMessage.cpp  MachineStateMessage.h  StateChangeMessage.cpp  StateChangeMessage.h
Test/: main.cpp
TestingComponents/: SimpleComponent.cpp  SimpleComponent.h
src/: Component.cpp  Component.h  Machine.cpp  Machine.h
src/Components/: Conveyor.cpp  Conveyor.h  Delivery.cpp  Delivery.h  Feeder.cpp  Feeder.h  PaintStation.cpp  PaintStation.h  TempoComponent.h
src/Interfaces/: ComponentMessageReceiver.h  ConveyorRateMessageReceiver.h  CountMessageReceiver.h  ExternalMachineMessageReceiver.h  ExternalMachineStateReceiver.h  MachineStateMessageReceiver.h
src/Logger/: Logger.cpp  Logger.h
src/Messages/: ActionStatusMessage.cpp  ActionStatusMessage.h  ComponentMessage.cpp  ComponentMessage.h  ConveyorRateMessage.cpp  ConveyorRateMessage.h  CountMessage.cpp  CountMessage.h  MachineStateMessage.cpp  MachineStateMessage.h  StateChangeMessage.cpp  StateChangeMessage.h
src/Test/: main.cpp
src/components/: Conveyor.cpp  Conveyor.h  Delivery.cpp  Delivery.h  Feeder.cpp  Feeder.h  PaintStation.cpp  PaintStation.h  TempoComponent.h
src/interfaces/: ComponentMessageReceiver.h  ConveyorRateMessageReceiver.h  CountMessageReceiver.h  ExternalMachineMessageReceiver.h  ExternalMachineStateReceiver.h  MachineStateMessageReceiver.h
src/logger/: Logger.h
src/messages/: ComponentMessage.cpp  ComponentMessage.h  CountMessage.cpp
src/test/: Main.cpp
